[gd_scene load_steps=9 format=2]

[ext_resource path="res://Scripts/scrDoor.gd" type="Script" id=1]
[ext_resource path="res://Sounds/SFX/sfxDoor.ogg" type="AudioStream" id=2]
[ext_resource path="res://Models/Objects/Door/matDoor.material" type="Material" id=3]
[ext_resource path="res://Materials/matDoor.tres" type="Material" id=4]
[ext_resource path="res://Sounds/SFX/sfxDoorLocked.ogg" type="AudioStream" id=6]

[sub_resource type="ArrayMesh" id=1]
surfaces/0 = {
"aabb": AABB( -0.0012, -0.009, 0, 0.0024, 0.018, 0.028 ),
"array_data": PoolByteArray( 112, 18, 131, 186, 189, 116, 19, 188, 0, 0, 0, 0, 129, 0, 0, 0, 0, 0, 127, 127, 0, 0, 0, 0, 112, 18, 131, 186, 189, 116, 19, 188, 66, 96, 229, 60, 129, 0, 0, 0, 0, 0, 127, 127, 0, 56, 0, 0, 112, 18, 131, 186, 189, 116, 19, 60, 66, 96, 229, 60, 129, 0, 0, 0, 0, 0, 127, 127, 0, 56, 0, 56, 112, 18, 131, 186, 189, 116, 19, 60, 0, 0, 0, 0, 129, 0, 0, 0, 0, 0, 127, 127, 0, 0, 0, 56, 112, 18, 131, 186, 189, 116, 19, 60, 0, 0, 0, 0, 0, 127, 0, 0, 0, 0, 129, 127, 208, 59, 48, 56, 112, 18, 131, 186, 189, 116, 19, 60, 66, 96, 229, 60, 0, 127, 0, 0, 0, 0, 129, 127, 0, 56, 48, 56, 112, 18, 131, 58, 189, 116, 19, 60, 66, 96, 229, 60, 0, 127, 0, 0, 0, 0, 129, 127, 0, 56, 96, 55, 112, 18, 131, 58, 189, 116, 19, 60, 0, 0, 0, 0, 0, 127, 0, 0, 0, 0, 129, 127, 208, 59, 96, 55, 112, 18, 131, 58, 189, 116, 19, 60, 0, 0, 0, 0, 127, 0, 0, 0, 0, 0, 127, 127, 0, 0, 0, 56, 112, 18, 131, 58, 189, 116, 19, 60, 66, 96, 229, 60, 127, 0, 0, 0, 0, 0, 127, 127, 0, 56, 0, 56, 112, 18, 131, 58, 189, 116, 19, 188, 66, 96, 229, 60, 127, 0, 0, 0, 0, 0, 127, 127, 0, 56, 0, 60, 112, 18, 131, 58, 189, 116, 19, 188, 0, 0, 0, 0, 127, 0, 0, 0, 0, 0, 127, 127, 0, 0, 0, 60, 112, 18, 131, 58, 189, 116, 19, 188, 0, 0, 0, 0, 0, 129, 0, 0, 129, 0, 0, 127, 0, 56, 0, 60, 112, 18, 131, 58, 189, 116, 19, 188, 66, 96, 229, 60, 0, 129, 0, 0, 129, 0, 0, 127, 0, 56, 48, 56, 112, 18, 131, 186, 189, 116, 19, 188, 66, 96, 229, 60, 0, 129, 0, 0, 129, 0, 0, 127, 112, 56, 48, 56, 112, 18, 131, 186, 189, 116, 19, 188, 0, 0, 0, 0, 0, 129, 0, 0, 129, 0, 0, 127, 112, 56, 0, 60, 112, 18, 131, 58, 189, 116, 19, 60, 66, 96, 229, 60, 0, 0, 127, 0, 0, 129, 0, 127, 0, 56, 96, 55, 112, 18, 131, 186, 189, 116, 19, 60, 66, 96, 229, 60, 0, 0, 127, 0, 0, 129, 0, 127, 0, 56, 160, 54, 112, 18, 131, 186, 189, 116, 19, 188, 66, 96, 229, 60, 0, 0, 127, 0, 0, 129, 0, 127, 16, 59, 160, 54, 112, 18, 131, 58, 189, 116, 19, 188, 66, 96, 229, 60, 0, 0, 127, 0, 0, 129, 0, 127, 16, 59, 96, 55, 82, 73, 157, 186, 111, 18, 3, 188, 165, 155, 68, 60, 130, 0, 0, 0, 0, 0, 127, 127, 208, 56, 48, 56, 82, 73, 157, 186, 111, 18, 3, 188, 244, 253, 84, 60, 130, 0, 0, 0, 0, 0, 127, 127, 16, 57, 48, 56, 82, 73, 157, 186, 166, 155, 196, 187, 244, 253, 84, 60, 130, 0, 0, 0, 0, 0, 127, 127, 16, 57, 112, 56, 82, 73, 157, 186, 166, 155, 196, 187, 165, 155, 68, 60, 130, 0, 0, 0, 0, 0, 127, 127, 208, 56, 112, 56, 80, 73, 157, 58, 111, 18, 3, 188, 165, 155, 68, 60, 126, 0, 0, 0, 0, 0, 127, 129, 224, 56, 16, 58, 80, 73, 157, 58, 166, 155, 196, 187, 165, 155, 68, 60, 126, 0, 0, 0, 0, 0, 127, 129, 224, 56, 80, 58, 80, 73, 157, 58, 166, 155, 196, 187, 244, 253, 84, 60, 126, 0, 0, 0, 0, 0, 127, 129, 32, 57, 80, 58, 80, 73, 157, 58, 111, 18, 3, 188, 244, 253, 84, 60, 126, 0, 0, 0, 0, 0, 127, 129, 32, 57, 16, 58 ),
"array_index_data": PoolByteArray( 3, 0, 1, 0, 0, 0, 3, 0, 2, 0, 1, 0, 7, 0, 5, 0, 4, 0, 7, 0, 6, 0, 5, 0, 11, 0, 9, 0, 8, 0, 11, 0, 10, 0, 9, 0, 15, 0, 13, 0, 12, 0, 15, 0, 14, 0, 13, 0, 19, 0, 17, 0, 16, 0, 19, 0, 18, 0, 17, 0, 23, 0, 21, 0, 20, 0, 23, 0, 22, 0, 21, 0, 27, 0, 25, 0, 24, 0, 27, 0, 26, 0, 25, 0 ),
"blend_shape_data": [  ],
"format": 97559,
"index_count": 42,
"material": ExtResource( 3 ),
"name": "Cube.002",
"primitive": 4,
"skeleton_aabb": [  ],
"vertex_count": 28
}

[sub_resource type="ConcavePolygonShape" id=2]
data = PoolVector3Array( -0.001, 0.009, 0, -0.001, -0.009, 0.028, -0.001, -0.009, 0, -0.001, 0.009, 0, -0.001, 0.009, 0.028, -0.001, -0.009, 0.028, 0.001, 0.009, 0, -0.001, 0.009, 0.028, -0.001, 0.009, 0, 0.001, 0.009, 0, 0.001, 0.009, 0.028, -0.001, 0.009, 0.028, 0.001, -0.009, 0, 0.001, 0.009, 0.028, 0.001, 0.009, 0, 0.001, -0.009, 0, 0.001, -0.009, 0.028, 0.001, 0.009, 0.028, -0.001, -0.009, 0, 0.001, -0.009, 0.028, 0.001, -0.009, 0, -0.001, -0.009, 0, -0.001, -0.009, 0.028, 0.001, -0.009, 0.028, 0.001, -0.009, 0.028, -0.001, 0.009, 0.028, 0.001, 0.009, 0.028, 0.001, -0.009, 0.028, -0.001, -0.009, 0.028, -0.001, 0.009, 0.028, -0.0012, -0.006, 0.012, -0.0012, -0.008, 0.013, -0.0012, -0.008, 0.012, -0.0012, -0.006, 0.012, -0.0012, -0.006, 0.013, -0.0012, -0.008, 0.013, 0.0012, -0.008, 0.013, 0.0012, -0.006, 0.012, 0.0012, -0.008, 0.012, 0.0012, -0.008, 0.013, 0.0012, -0.006, 0.013, 0.0012, -0.006, 0.012 )

[sub_resource type="BoxShape" id=3]
extents = Vector3( 0.03, 0.03, 0.015 )

[node name="oDoor" type="Area" groups=[
"Door",
]]
script = ExtResource( 1 )

[node name="doorModel" type="MeshInstance" parent="."]
transform = Transform( 100, 0, 0, 0, -1.19209e-05, 100, 0, -100, -1.19209e-05, 0, 0, 0 )
mesh = SubResource( 1 )
material/0 = ExtResource( 4 )

[node name="StaticBody" type="StaticBody" parent="doorModel"]

[node name="CollisionShape" type="CollisionShape" parent="doorModel/StaticBody"]
shape = SubResource( 2 )

[node name="doorCol" type="CollisionShape" parent="."]
transform = Transform( 100, 0, 0, 0, -1.19209e-05, 100, 0, -100, -1.19209e-05, 0, 1.51773, 0 )
shape = SubResource( 3 )

[node name="doorSFX" type="AudioStreamPlayer3D" parent="."]
transform = Transform( 0.769231, 0, 0, 0, 0.769231, 0, 0, 0, 0.769231, 0, 1.53846, 0 )
stream = ExtResource( 2 )
bus = "SFX"

[node name="doorSFXLocked" type="AudioStreamPlayer3D" parent="."]
transform = Transform( 0.769231, 0, 0, 0, 0.769231, 0, 0, 0, 0.769231, 0, 1.53846, 0 )
stream = ExtResource( 6 )
bus = "SFX"
[connection signal="body_entered" from="." to="." method="_on_oDoor_body_entered"]
[connection signal="body_exited" from="." to="." method="_on_oDoor_body_exited"]
